--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,15 +9,17 @@ androidx-constraintlayout = "2.2.1"
 androidx-core = "1.16.0"
 androidx-datastore = "1.1.7"
 androidx-espresso = "3.7.0"
-androidx-lifecycle = "2.9.1"
+androidx-lifecycle = "2.9.3"
 androidx-material = "1.12.0"
+androidx-navigation = "2.9.0-beta05"
 androidx-testExt = "1.3.0"
 composeMultiplatform = "1.8.2"
 junit = "4.13.2"
-kotlin = "2.2.0"
-kotlinx-serialization = "1.9.0"
+kotlin = "2.2.10"
+kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.7.1"
 android-play-review = "2.0.2"
+kotlinx-serialization = "1.9.0"
 fastlane-screengrab = "2.1.1"
 ktor = "3.2.3"
 material-icons = "1.7.3"
@@ -35,8 +37,10 @@ androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecyc
 androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
 androidx-datastore = { group = "androidx.datastore", name = "datastore", version.ref = "androidx-datastore" }
 androidx-datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "androidx-datastore" }
-kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 android-play-review = { module = "com.google.android.play:review", version.ref = "android-play-review" }
 android-play-review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "android-play-review" }
 fastlane-screengrab = { module = "tools.fastlane:screengrab", version.ref = "fastlane-screengrab" }
