--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ androidx-lifecycle = "2.9.3"
 androidx-material = "1.12.0"
 androidx-navigation = "2.9.0-beta05"
 androidx-testExt = "1.3.0"
-composeMultiplatform = "1.8.2"
+composeMultiplatform = "1.9.0-rc02"
 junit = "4.13.2"
 kotlin = "2.2.10"
 kotlinx-coroutines = "1.10.2"
