Mystery and auth endpoints are working

--- a/backend/src/main/resources/application.conf
+++ b/backend/src/main/resources/application.conf
@@ -27,12 +27,14 @@ database {
 
 jwt {
     secret = ${?JWT_SECRET}
-    issuer = "mysterybox-backend"
-    audience = "mysterybox-app"
+    issuer = ${?JWT_ISSUER}
+    audience = ${?JWT_AUDIENCE}
     realm = "mysterybox"
 
-    // Development default (should be overridden in production)
+    // Development defaults (should be overridden in production)
     default {
         secret = "super-secret-jwt-key-change-in-production"
+        issuer = "mysterybox-backend"
+        audience = "mysterybox-app"
     }
 }
