--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,6 @@ captures
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 backend/logs/
+backend/bin/
 
 .fake
